add jwt token security and cache